# cookbook

./: Makefile  README.md
examples/localcowork/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.yaml  README.md  index.html  package-lock.json  package.json  pyproject.toml  quickstart_issues.md  tsconfig.json  vite.config.ts  vitest.integration.config.ts  vitest.model.config.ts
examples/localcowork/.claude/: settings.json
examples/localcowork/.claude/commands/: add-smoke-test.md  build-check.md  model-test.md  new-mcp-server.md  progress.md  session-end.md  test-usecase.md  validate-server.md
examples/localcowork/.git-hooks/: pre-commit  pre-push
examples/localcowork/_models/: config.yaml
examples/localcowork/docs/: PRD.md  agent-loop-sequence-diagram.md  contributing.md  cross-platform-audit.md  mcp-tool-registry.yaml
examples/localcowork/docs/architecture-decisions/: 001-tauri-over-electron.md  002-mcp-server-language-selection.md  003-model-abstraction-layer.md  004-ocr-engine-lfm-vision-primary.md  005-mcp-init-protocol-alignment.md  006-agent-loop-reliability.md  007-agent-loop-hardening.md  008-tool-calling-optimization-strategy.md  009-dual-model-orchestrator.md  010-rag-prefilter-benchmark-analysis.md
examples/localcowork/docs/demo/: lfm2-24b-demo.md
examples/localcowork/docs/model-analysis/: README.md  accuracy-improvement-roadmap.md  dual-model-orchestrator-performance.md  fine-tuning-results.md  gpt-oss-20b.md  lfm2-24b-a2b-benchmark.md  ollama-demo-prompts.md  project-learnings-and-recommendations.md  quality-benchmark-results.md  qwen3-30b-a3b-tool-calling.md  tool-calling-benchmark-results.md
examples/localcowork/docs/patterns/: context-window-management.md  human-in-the-loop.md  mcp-server-pattern.md
examples/localcowork/mcp-servers/: tsconfig.base.json
examples/localcowork/mcp-servers/audit/: package.json
examples/localcowork/mcp-servers/calendar/: package.json
examples/localcowork/mcp-servers/clipboard/: package.json
examples/localcowork/mcp-servers/data/: package.json
examples/localcowork/mcp-servers/document/: pyproject.toml
examples/localcowork/mcp-servers/email/: package.json
examples/localcowork/mcp-servers/filesystem/: package.json
examples/localcowork/mcp-servers/knowledge/: pyproject.toml
examples/localcowork/mcp-servers/meeting/: pyproject.toml
examples/localcowork/mcp-servers/ocr/: pyproject.toml
examples/localcowork/mcp-servers/screenshot-pipeline/: pyproject.toml
examples/localcowork/mcp-servers/security/: pyproject.toml
examples/localcowork/mcp-servers/system/: package.json
examples/localcowork/mcp-servers/system-settings/: package.json
examples/localcowork/mcp-servers/task/: package.json
examples/localcowork/scripts/: benchmark-demo.sh  benchmark-finetuned.sh  benchmark-lfm2-24b.sh  convert-to-gguf.sh  doc-health.sh  fine-tune-grpo.py  fine-tune-lora.py  fine-tune-router.py  generate-training-data.ts  generate_training_data_v2.py  setup-dev.sh  smoke-test.sh  start-model.sh  test-router-ft.sh  validate-mcp-servers.sh
examples/localcowork/src/: App.tsx  main.tsx  package.json  styles.css
examples/localcowork/src-tauri/src/: lib.rs
examples/localcowork/tests/: tsconfig.json
(+380 files in other folders)
