[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localcowork-mcp-ocr"
version = "0.1.0"
description = "MCP server — LFM Vision (primary) + Tesseract (fallback) text extraction"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
